--- a/app/src/main/res/navigation/mobile_navigation2.xml
+++ b/app/src/main/res/navigation/mobile_navigation2.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_mapa"
-        android:name="com.example.dashboard.ui.mapa.fragment.MapaFragment"
+        android:name="com.example.dashboard.ui.mapa.fragment.TabMapFragment"
         android:label="@string/menu_mapa"
         tools:layout="@layout/fragment_map" />
 
