--- a/app/src/main/res/layout/activity_detalle_incidencia.xml
+++ b/app/src/main/res/layout/activity_detalle_incidencia.xml
@@ -333,7 +333,21 @@
                         android:textSize="16sp" />
 
                 </LinearLayout>
+
             </androidx.cardview.widget.CardView>
+
         </LinearLayout>
     </ScrollView>
+
+    <Button
+        android:id="@+id/btnDesacreditar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:background="#6096B4"
+        android:text="Desacreditar Incidencia"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp" />
 </RelativeLayout>
