--- a/app/src/main/res/layout/activity_reportar_incidencia.xml
+++ b/app/src/main/res/layout/activity_reportar_incidencia.xml
@@ -9,8 +9,8 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="399dp"
-        android:layout_height="74dp"
+        android:layout_width="354dp"
+        android:layout_height="68dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginVertical="8dp"
         android:layout_marginStart="8dp"
@@ -49,7 +49,6 @@
         android:id="@+id/button"
         android:layout_width="144dp"
         android:layout_height="36dp"
-        android:layout_marginBottom="8dp"
         android:background="#93BFCF"
         android:text="Reportar"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -60,9 +59,9 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="410dp"
-        android:layout_height="448dp"
-        android:layout_marginBottom="1dp"
+        android:layout_width="312sp"
+        android:layout_height="330sp"
+        android:layout_marginBottom="1sp"
         app:layout_constraintBottom_toTopOf="@+id/cardView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.538"
@@ -72,33 +71,34 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
-        android:layout_width="401dp"
-        android:layout_height="137dp"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginVertical="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="23dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginBottom="5dp"
+        android:layout_width="360sp"
+        android:layout_height="103sp"
+        android:layout_marginHorizontal="16sp"
+        android:layout_marginVertical="8sp"
+        android:layout_marginStart="8sp"
+        android:layout_marginTop="23sp"
+        android:layout_marginEnd="9sp"
+        android:layout_marginBottom="5sp"
         android:background="#BDCDD6"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="4dp"
+        app:cardCornerRadius="8sp"
+        app:cardElevation="4sp"
         app:cardPreventCornerOverlap="false"
         app:cardUseCompatPadding="true"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.588"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="392sp"
+            android:layout_height="108sp"
             android:background="#FFFFFF"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="@string/descripci_n"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -107,8 +107,8 @@
                 android:id="@+id/editTextTextMultiLine"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="2dp"
-                android:layout_marginBottom="7dp"
+                android:layout_marginTop="2sp"
+                android:layout_marginBottom="7sp"
                 android:background="#FFFFFF"
                 android:ems="10"
                 android:gravity="start|top"
