--- a/app/src/main/res/layout/fragment_all_incidencias.xml
+++ b/app/src/main/res/layout/fragment_all_incidencias.xml
@@ -6,13 +6,13 @@
     tools:context="com.example.dashboard.ui.mis_incidencias.MisIncidenciasFragment">
 
     <ScrollView
-        android:backgroundTint="@color/color_background_incidencias"
+        android:background="@color/color_background_incidencias"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
-            android:backgroundTint="@color/color_background_incidencias"
+            android:background="@color/color_background_incidencias"
             android:id="@+id/incidencias_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
