--- a/app/src/main/res/layout/fragment_incidencias.xml
+++ b/app/src/main/res/layout/fragment_incidencias.xml
@@ -8,11 +8,11 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:backgroundTint="@color/color_background_incidencias"
+        android:background="@color/color_background_incidencias"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
-            android:backgroundTint="@color/color_background_incidencias"
+            android:background="@color/color_background_incidencias"
             android:id="@+id/incidencias_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
