--- a/app/src/main/res/layout/incidencia_prueba.xml
+++ b/app/src/main/res/layout/incidencia_prueba.xml
@@ -1,14 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:layout_height="130dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="1dp"
         android:background="@drawable/incidencia_prueba"
@@ -16,14 +14,6 @@
         android:clipToPadding="false"
         android:outlineProvider="background"
         android:padding="16dp">
-
-        <Button
-            android:id="@+id/botondetalle"
-            android:layout_width="341dp"
-            android:layout_height="118dp"
-            android:background="#00FFFFFF"
-            android:enabled="true"
-            android:visibility="visible" />
 
         <LinearLayout
             android:id="@+id/linear_imagen_incidencia"
@@ -38,7 +28,9 @@
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/sioque"
                 android:clipToOutline="true"
-                android:scaleType="fitCenter" />
+                android:scaleType="fitCenter"
+
+                android:src="@drawable/icono_app" />
         </LinearLayout>
 
 
@@ -68,7 +60,6 @@
                 android:textSize="16sp" />
 
         </LinearLayout>
-
 
     </RelativeLayout>
 </RelativeLayout>
